--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                             </a>
                         {% endif %}
                         <a 
-                            href="  "  
+                            href="#"  
                             class="text-white bg-amber-500 hover:bg-indigo-800 focus:ring-4 focus:ring-indigo-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-amber-500 dark:hover:bg-amber-600 focus:outline-none dark:focus:ring-indigo-800"
                         >
                             Mi Pedido
